# dorado

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  DEV.md  Dockerfile  LICENCE.txt  README.md  make_koi_archive.sh  make_koi_archive_win.sh  sanitizers-ci.yml  tsan.supp
dorado/alignment/: BedFile.cpp  BedFile.h  BedFileAccess.cpp  BedFileAccess.h  CMakeLists.txt  IndexFileAccess.cpp  IndexFileAccess.h  Minimap2Aligner.cpp  Minimap2Aligner.h  Minimap2Index.cpp  Minimap2Index.h  Minimap2IndexSupportTypes.h  Minimap2MemoryLimiter.cpp  Minimap2Options.cpp  Minimap2Options.h  alignment_info.h  alignment_processing_items.cpp  alignment_processing_items.h  bed_file.cpp  bed_file.h  minimap2_arg_parsing.h  minimap2_args.cpp  minimap2_args.h  minimap2_helper.cpp  minimap2_helper.h  minimap2_wrappers.h  sam_utils.cpp
dorado/api/: CMakeLists.txt  Pipelines.cpp  Pipelines.h  Runners.cpp  caller_creation.cpp  caller_creation.h  pipeline_creation.cpp  pipeline_creation.h  runner_creation.cpp  runner_creation.h
dorado/basecall/: BasecallerParams.cpp  BasecallerParams.h  CMakeLists.txt  CRFModel.cpp  CRFModel.h  CRFModelConfig.cpp  CRFModelConfig.h  CudaCRFModel.cpp  CudaCRFModel.h  CudaCaller.cpp  CudaCaller.h  CudaChunkBenchmarks.cpp  CudaChunkBenchmarks.h  CudaModelRunner.cpp  CudaModelRunner.h  MetalCRFModel.cpp  MetalCRFModel.h  MetalCaller.cpp  MetalCaller.h  MetalModelRunner.cpp  MetalModelRunner.h  ModelRunner.cpp  ModelRunner.h  ModelRunnerBase.cpp  ModelRunnerBase.h  Quadro_GV100.cpp  crf_utils.cpp  crf_utils.h
dorado/cli/: CMakeLists.txt  CorrectionMapper.cpp  CorrectionMapper.h  aligner.cpp  barcoder.cpp  basecall_output_args.cpp  basecall_output_args.h  basecaller.cpp  benchmark.cpp  cli.h  cli_utils.h  consensus.cpp  correct.cpp  demux.cpp  download.cpp  duplex.cpp  main.cpp  model_resolution.h  polish.cpp  read_output_progress_stats.h  summary.cpp  trim.cpp  variant.cpp  variant_progress_tracker.cpp  variant_progress_tracker.h
dorado/compat/: CMakeLists.txt  compat_utils.cpp  compat_utils.h
dorado/config/: BasecallModelConfig.cpp  BasecallModelConfig.h  BasecallerParams.cpp  BasecallerParams.h  BatchParams.cpp  BatchParams.h  CMakeLists.txt  CRFModelConfig.cpp  CRFModelConfig.h  ModBaseBatchParams.cpp  ModBaseBatchParams.h  ModBaseModelConfig.cpp  ModBaseModelConfig.h  common.cpp  common.h
dorado/correct/: CMakeLists.txt  CorrectionProgressTracker.cpp  CorrectionProgressTracker.h  conversions.cpp  conversions.h  decode.cpp  decode.h  features.cpp  features.h  infer.cpp  infer.h  types.cpp  types.h  windows.cpp  windows.h
dorado/data_loader/: CMakeLists.txt  DataLoader.cpp  DataLoader.h  Fast5DataLoader.cpp  Fast5DataLoader.h  ModelFinder.cpp  ModelFinder.h  slow5_thread.cpp  slow5_thread.h
dorado/demux/: AdapterDetector.cpp  AdapterDetector.h  AdapterDetectorSelector.cpp  AdapterDetectorSelector.h  BarcodeClassifier.cpp  BarcodeClassifier.h  BarcodeClassifierSelector.cpp  BarcodeClassifierSelector.h  CMakeLists.txt  KitInfoProvider.cpp  KitInfoProvider.h  Trimmer.cpp  Trimmer.h  adapter_info.cpp  adapter_info.h  adapter_primer_kits.cpp  adapter_primer_kits.h  barcoding_info.cpp  barcoding_info.h  parse_custom_kit.cpp  parse_custom_kit.h  parse_custom_sequences.cpp  parse_custom_sequences.h
dorado/devtools/: CMakeLists.txt  slow_interpose.cpp  slow_interpose.h
dorado/file_info/: CMakeLists.txt  file_info.cpp  file_info.h
dorado/hts_io/: CMakeLists.txt  FastxRandomReader.cpp  FastxRandomReader.h
dorado/modbase/: CMakeLists.txt  ModBaseCaller.cpp  ModBaseCaller.h  ModBaseContext.cpp  ModBaseContext.h  ModBaseEncoder.cpp  ModBaseModel.h  ModBaseModelConfig.cpp  ModBaseModelConfig.h  ModBaseRunner.cpp  ModBaseRunner.h  ModBaseScaler.cpp  ModbaseEncoder.cpp  ModbaseEncoder.h  ModbaseScaler.cpp  ModbaseScaler.h  MotifMatcher.cpp  MotifMatcher.h  encode_kmer.cpp  encode_kmer.h  modbase_encoder.cpp  modbase_encoder.h  modbase_scaler.cpp  modbase_scaler.h  remora_encoder.cpp  remora_encoder.h  remora_scaler.cpp  remora_scaler.h  remora_utils.cpp  remora_utils.h
dorado/model_downloader/: CMakeLists.txt  downloader.cpp  downloader.h  downloader_foundation.mm  model_downloader.cpp  model_downloader.h
dorado/models/: CMakeLists.txt  kits.cpp  kits.h  metadata.cpp  metadata.h  model_complex.cpp  model_complex.h  model_downloader.cpp  model_downloader.h  model_downloader_foundation.mm  models.cpp  models.h
dorado/nn/: AuxiliaryData.cpp  CMakeLists.txt  CRFModel.cpp  CRFModel.h  CRFModelConfig.cpp  CRFModelConfig.h  CRFModules.cpp  CRFModules.h  ConvStack.cpp  ConvStack.h  CudaCRFModel.cpp  CudaCRFModel.h  FLSTMStack.cpp  KoiThreads.cpp  KoiUtils.cpp  KoiUtils.h  LSTMStack.cpp  LSTMStack.h  LinearUpsample.cpp  LinearUpsample.h  MetalCRFModel.cpp  MetalCRFModel.h  MetalModules.cpp  ModBaseModel.cpp  ModBaseModel.h  ModBaseModelConfig.cpp  ModBaseModelConfig.h  ModBaseRunner.cpp  ModBaseRunner.h  ModelRunner.h  ModelRunnerCPU.cpp  ModelRunnerCPU.h  ModelRunnerGPU.cpp  ModelRunnerGPU.h  Modules.cpp  RMSNorm.cpp  RemoraModel.cpp  RemoraModel.h  RemoraModelConfig.cpp  RemoraModelConfig.h  (+6 more)
tests/: AdapterDetectorTest.cpp  AlignerTest.cpp  AsyncQueueTest.cpp  BamReaderTest.cpp  BamUtilsTest.cpp  BamWriterTest.cpp  BarcodeClassifierSelectorTest.cpp  BarcodeClassifierTest.cpp  BarcodeDemuxerNodeTest.cpp  BasecallModelConfigTest.cpp  BasecallerParamsTest.cpp  BatchParamsTest.cpp  BedFileTest.cpp  CMakeLists.txt  CRFModelConfigTest.cpp  ChunkTest.cpp  CigarTest.cpp  CliUtilsTest.cpp  CorrectionWindowTest.cpp  CustomBarcodeParserTest.cpp  DriverQueryTest.cpp  DuplexReadTaggingNodeTest.cpp  DuplexSplitTest.cpp  DuplexUtilsTest.cpp  Fast5DataLoaderTest.cpp  FastqTagsTest.cpp  FastxRandomReaderTest.cpp  FastxSequentialReaderTest.cpp  FileInfoTest.cpp  FixedSizeQueueTest.cpp  HeaderMapperTest.cpp  HtsFileTest.cpp  IndexFileAccessTest.cpp  KadayashiTest.cpp  MathUtilsTest.cpp  MergeHeadersTest.cpp  MessageSinkUtils.h  MetalLinearTest.cpp  Minimap2IndexTest.cpp  ModBaseChunkTest.cpp  (+99 more)
(+1463 files in other folders)
